# rust_actix_app

./: .env  Cargo.toml
migrations/: 20250113101353_users.sql  20250114193910_todo.sql
src/: authmiddleware.rs  errors.rs  main.rs  models.rs
src/middleware/: auth_middleware.rs
src/routes/: init.rs  mod.rs
src/routes/todo/: create_todo.rs  mark_done_todo.rs  mod.rs
src/routes/user/: create_user.rs  current_user.rs  login.rs  mod.rs
src/tokens/: generate_token.rs
