[package]
name = "actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-async-std-native-tls", "postgres"] }
validator = { version = "0.19", features = ["derive"] }
bcrypt = "0.16"
jsonwebtoken = "9.3.0"
dotenvy = "0.15.7"
futures = "0.3.31"
actix-service = "2.0.2"
actix-web-lab = "0.23.0"
